tests/NormalTests/paczka2/big_fuzzy/68160297.err
Error in line 2: SenRp A980 48,5
Error in line 12: lQXuNqR A980 50,5
Error in line 26: emYExr8G A802 13,18
Error in line 6: VCPNs5Gb0 A980 23,8
Error in line 38: emYExr8G A980 67,2
Error in line 37: c29 S27 116,5
Error in line 42: emYExr8G S537 55,4
Error in line 49: lQXuNqR S537 40,3
Error in line 46: emYExr8G A980 4,8
Error in line 64: c29 S537 30,3
Error in line 73: cI9 A80I 3,7
Error in line 72: vss9Z2 S27 5,3
Error in line 65: c29 A802 8,8
Error in line 45: VCPNs5Gb0 A802 29,6
Error in line 91: lQXuNqR A980 96,5
Error in line 109: VCPNs5Gb0 A980 28,7
Error in line 111: vss9Z2 A802 65,9
Error in line 119: lQXuNqR S537 32,5
Error in line 151: c29 S537 64,1
Error in line 171: lQXuNqR S537 434,83
Error in line 170: emYExr8G S537 47,7
Error in line 160: lQXuNqR S537 97,6
Error in line 172: S27 S537 23,7
Error in line 169: vss9Z2 A802 53,2
Error in line 173: emYExr8G A980 93,4
Error in line 182: lQXuNqR S537 92,1
Error in line 176: S27 A980 66,4
Error in line 193: lQXuNqR A802 218,=
Error in line 190: lQXuNqR A802 67,6
Error in line 200: c29 A980 96,5
Error in line 204: c29 AJ02 14,7
Error in line 192: S27 S537 37,7
Error in line 202: c29 S27 14,0
Error in line 209: c29 A802 43,5
Error in line 211: S27 S27 19,3
Error in line 212: S27 A980 1,6
Error in line 214: vss9Z2 A980 81,6
Error in line 221: emYExr8G A980 1,6
Error in line 239: lQXuNqR S27 92,0
Error in line 240: lQXuNqR A980 18,9
Error in line 241: lQXuNqR A802 41,8
Error in line 242: lQXuNqR S27 25,5
